--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,14 @@ h1 {
   font-weight: 200;
   color: #0ccac4;
 }
+
+.sticky {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background: linear-gradient(
+    to left,
+    rgba(7, 27, 82, 0.9) 0%,
+    rgba(5, 124, 124, 0.9) 100%
+  );
+}
