--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+footer {
+  height: 5rem;
+  bottom: 0;
+  background: transparent;
+  color: #fff;
+  /*margin: 0 auto;
+  align-items: center;
+  border-radius: 1rem 1rem 0.5rem 0.5rem;
+  border: solid 2px var(--box-bg-color);*/
+}
+
+#footnote {
+  height: 100%;
+  padding-top: 1.5rem;
+}
+
+#tag {
+  font-family: Ink free, cursive, sans-serif;
+  font-size: 1.5rem;
+  font-style: italic;
+  color: rgb(219, 193, 25);
+}
